fix contrast issues with article

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -83,7 +83,7 @@ header nav a {
     width: 80%;
     left: 10%;
     top: 150px;
-    background-color: rgba(255,  255, 255, 0.05);
+    background-color: rgba(13,  33, 73, 0.8);
     padding: 10px;
     border: 1px solid var(--secondary-color);
 }
